--- a/glade/person_show_all_events.glade
+++ b/glade/person_show_all_events.glade
@@ -38,12 +38,12 @@
           <widget class="GtkHBox" id="hbox105">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="spacing">6</property>
+            <property name="spacing">10</property>
             <child>
               <widget class="GtkLabel" id="label166">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Person</property>
+                <property name="label" translatable="yes">Person:</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -63,6 +63,18 @@
                 <property name="expand">True</property>
                 <property name="fill">True</property>
                 <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label_person_name">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">0</property>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </widget>
