--- a/glade/repetitive_conditions.glade
+++ b/glade/repetitive_conditions.glade
@@ -1995,7 +1995,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xpad">12</property>
-                            <property name="label" translatable="yes">Feedback relative to the maximum of ...</property>
+                            <property name="label" translatable="yes">Feedback relative to the maximum repetition of ...</property>
                             <property name="use_markup">True</property>
                           </widget>
                           <packing>
